# chiken

./: .eslintrc.json  .gitignore  .test_env  GETTING_STARTED.md  README.md  components.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  trace-6f132dc91b1776622658094a5f81a304 (1).json  tsconfig.json
.github/ISSUE_TEMPLATE/: feature-request-or-enhancement.md
.github/workflows/: ci.yml  tauri-action-release.yml
app/: MainClientPage.tsx  globals.css  layout.tsx  page.tsx
app/[locale]/: layout.tsx  page.tsx
app/components/: MainPage.tsx  StartupScreen.tsx
app/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatInterface.tsx  ConnectionStatusBadge.tsx  InputControls.tsx  MarkdownBubble.tsx  MentionDisplay.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  SearchTableDialog.tsx  UploadStatusDisplay.tsx
app/components/config/: ConfigAlerts.tsx  EnvVarInfoCard.tsx  EnvVariablesConfig.tsx  ModelSuggestDropdown.tsx  PdfParserConfig.tsx  ProviderAndModelSelect.tsx  ProviderAuth.tsx  ProviderConfigButton.tsx  ProviderInfoCard.tsx  ProviderSelect.tsx  ProviderSpecificConfig.tsx  RAGConfig.tsx  SaveConfigButton.tsx  SearchEngineConfig.tsx  TestAndSaveConfigButtons.tsx
app/components/knowledge/: KnowledgeBaseCreationDialog.tsx  KnowledgeBaseDocumentsSection.tsx  KnowledgeBaseList.tsx  KnowledgeBaseManageSingleDialog.tsx  KnowledgeBaseQuerySection.tsx  KnowledgeBaseSidebar.tsx  MCPConfigDialog.tsx  MCPConfigJSON.tsx  MCPSection.tsx
app/components/layout/: AppLayout.tsx  ChatSessions.tsx  Sidebar.tsx  Titlebar.tsx
app/components/providers/: ClientProviders.tsx  ConnectionManager.tsx  JotaiProvider.tsx  SessionInitializer.tsx  ThemeProvider.tsx
app/components/rag/: FileUpload.tsx  RAGPanel.tsx
app/components/settings/: SettingsDialog.tsx
app/components/titlebar/: WindowTitlebar.tsx  index.ts  windowControls.ts
app/components/ui/: ai-generating.tsx  bubble-toast.tsx  card-select.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  provider-info-card.tsx  scroll-area.tsx  select.tsx  textarea.tsx  toast.tsx  toaster.tsx
app/components/upload/: FileUploadZone.tsx
app/components/zotero/: ZoteroCollectionTree.example.tsx  ZoteroCollectionTree.tsx  ZoteroCollections.tsx
app/hooks/: use-toast.ts  useCustomEndpoints.ts  useFileUpload.ts  useKnowledgeBaseActions.ts  useProviderConnection.ts  useProviderCredentials.ts  useProviderDisplay.ts  useProviderSelection.ts  useSessionsStatus.ts  useUnifiedUpload.ts  useZoteroStreaming.ts
app/lib/: api-client.ts  backend-service.ts  background-streaming.ts  chat-service.ts  dom-table.ts  file-utils.ts  mcp-utils.ts  provider-config.ts  secret-store.ts  tauri-service.ts  tauri-store.ts  upload-service.ts  utils.ts
app/store/: chatAtoms.ts  configAtoms.ts  ragAtoms.ts  sessionAtoms.ts  uiAtoms.ts
app/types/: global.d.ts
docs/: GETTING_STARTED.md  built-in-agents.md  mcp-claude-desktop-setup.md
i18n/: request.ts
messages/: en.json  zh.json
messages/en/: common.json  config.json  configButtons.json  connection.json  envVars.json  kb.json  mcp.json  pdf.json  rag.json  ragPanel.json  sessions.json  settings.json  sidebar.json  upload.json  uploadZone.json  zotero.json
messages/zh/: common.json  config.json  configButtons.json  connection.json  envVars.json  index.ts  kb.json  mcp.json  pdf.json  rag.json  ragPanel.json  sessions.json  settings.json  sidebar.json  upload.json  uploadZone.json  zotero.json
src/: main.py  main.spec
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  secret_store.rs
src/backends/: api.py  constants.py  database.py  manager_singleton.py  utils.py
src/backends/agents/: __init__.py  agent_response.py  api.py  base.py  (+2 more)
src/tests/: test_api.py  test_embedding_fixes.py  test_rag.py
(+72 files in other folders)
