[package]
name = "app"
version = "0.2.0"
description = "ChiKen!"
authors = ["yuanjua"]
license = "MIT"
repository = "https://github.com/yuanjua/chiken"
default-run = "app"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
command-group = "2.1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
keyring = "2"
whoami = "1.6.1"
tauri-plugin-store = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
